Vulnerable package fixes

--- a/src/SFA.DAS.ServiceBus.Tools.Functions/SFA.DAS.ServiceBus.Tools.Functions.csproj
+++ b/src/SFA.DAS.ServiceBus.Tools.Functions/SFA.DAS.ServiceBus.Tools.Functions.csproj
@@ -21,10 +21,10 @@
         <PackageReference Include="NServiceBus.AzureFunctions.Worker.ServiceBus" Version="5.2.0"/>
         <PackageReference Include="NServiceBus.Extensions.Hosting" Version="3.0.0"/>
         <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="4.0.0"/>
-
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
-
-        <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="3.0.84"/>
+        <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="17.1.108"/>
+        <PackageReference Include="System.Formats.Asn1" Version="8.0.1" />
+        <PackageReference Include="System.Text.Json" Version="8.0.4" />
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
